# wo

./: Cargo.toml  README.md
apps/app-backups/: Cargo.toml
apps/app-backups/src/: gui.rs
apps/app-keybindings/: Cargo.toml
apps/app-keybindings/src/: gui.rs
apps/app-notepad/: Cargo.toml
apps/app-notepad/src/: gui.rs  main.rs
apps/app-passwords/: Cargo.toml
apps/app-passwords/src/: gui.rs
apps/app-project/: Cargo.toml
apps/app-project/src/: gui.rs  main.rs
apps/app-repositories/: Cargo.toml
apps/app-repositories/src/: gui.rs
crates/app-repositories/: Cargo.toml
crates/app-repositories/src/: gui.rs
crates/wo-bin/: Cargo.toml
crates/wo-bin/src/: gui.rs  main.rs  util.rs
crates/wo-common/: Cargo.toml
crates/wo-common/src/: lib.rs  passwords.rs  repo.rs
crates/wo-defaults/: Cargo.toml
crates/wo-defaults/src/: lib.rs
share/: wo.desktop
