[package]
name = "app-passwords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
directories = "5.0.1"
eframe = "0.22.0"
walkdir = "2.3.3"
wo-common = { version = "0.1.0", path = "../../crates/wo-common" }
